--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,11 +1,3 @@
-/*#home {
-  color: #fff;
-  background-image: url(../img/desk.jpg);
-  background-position: center;
-  
-  //background-image: url(../img/1700x1100.gif);
-  //background-image: url(../img/1.jpg); 
-  .fade-out {
-	  background: $slate;
-	}
-}*/
+svg {
+	max-width: 100%;
+}
