--- a/site/themes/FITZ/layouts/default.html
+++ b/site/themes/FITZ/layouts/default.html
@@ -9,12 +9,19 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Colin Fitz-Maurice is a Laravel Developer with a Frontend Focus, working for @Goodworld and living in Philadelphia.">
+    <meta name="format-detection" content="telephone=no">
     <title>{{ title or site_title }}</title>
-    <!--Styles-->
+    <!-- Styles -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ theme:css }}">
-</head>
+    <!-- Favicon & Touch Icon -->
+    <link rel="shortcut icon" href="http://fitz-maurice.com/favicon.ico" />
+    <link rel="icon" type="image/png" href="http://fitz-maurice.com/assets/img/favicon.png" />
+    <!-- My SVGs -->
+    <!-- Facebook Open Graph -->
 
+    <!-- Twitter Cards -->
+</head>
 
 <body>
 
