--- a/site/themes/FITZ/templates/home.html
+++ b/site/themes/FITZ/templates/home.html
@@ -26,7 +26,50 @@
 <footer>
     <div class="row">
         <div class="col-md-6 push-md-6 text-md-right text-xs-center">
-            These are going to be social icons
+            <ul>
+                <li>
+                    <a href="">
+                        <svg class="footer-icon">
+                            <use xlink:href="/site/themes/fitz/svg/sprite.svg#twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <svg class="footer-icon">
+                            <use xlink:href="/site/themes/fitz/svg/sprite.svg#linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <svg class="footer-icon">
+                            <use xlink:href="/site/themes/fitz/svg/sprite.svg#github"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <svg class="footer-icon">
+                            <use xlink:href="/site/themes/fitz/svg/sprite.svg#codepen"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <svg class="footer-icon">
+                            <use xlink:href="/site/themes/fitz/svg/sprite.svg#dribbble"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <svg class="footer-icon">
+                            <use xlink:href="/site/themes/fitz/svg/sprite.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </div>
         <div class="col-md-6 pull-md-6 text-md-left text-xs-center">&copy; Fitz Creative, LLC. {{ current_date format='Y' }}</div>
     </div>
