--- a/site/themes/fitz/css/fitz.css
+++ b/site/themes/fitz/css/fitz.css
@@ -1,6 +1,15 @@
+@import 'https://fonts.googleapis.com/css?family=Lato';
 html {
-  border: 4px solid #465058;
+  border: 6px solid #465058;
   height: 100%;
   width: 100%; }
+
+body {
+  font-family: 'Lato', sans-serif; }
+
+.footer-icon {
+  height: 30px;
+  width: 30px;
+  fill: #465058; }
 
 /*# sourceMappingURL=fitz.css.map */
