--- a/site/themes/FITZ/layouts/default.html
+++ b/site/themes/FITZ/layouts/default.html
@@ -25,7 +25,7 @@
 
 <body>
 
-    <div class="container-fluid">
+    <div class="sticky-page container-fluid">
         {{ template_content }}
     </div>
 
