--- a/site/themes/FITZ/layouts/default.html
+++ b/site/themes/FITZ/layouts/default.html
@@ -27,7 +27,9 @@
 <body>
 
     <div class="sticky-page container-fluid">
+        {{ partial:nav }}
         {{ template_content }}
+        {{ partial:footer }}
     </div>
 
     <!--Scripts-->
