--- a/site/themes/fitz/partials/footer.html
+++ b/site/themes/fitz/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer top-border">
     <div class="row">
         <div class="col-md-6 push-md-6 text-md-right text-xs-center">
             <ul>
