--- a/site/themes/fitz/sass/fitz.scss
+++ b/site/themes/fitz/sass/fitz.scss
@@ -23,11 +23,6 @@ a {
     }
 }
 
-.hero-text p {
-    margin-top: 1em;
-    font-size: 2em;
-}
-
 .sticky-page {
     height: 100%;
 }
@@ -47,151 +42,6 @@ a {
     padding-top: 15px;
 }
 
-footer.site-footer {
-    height: 40px;
-    line-height: 40px;
-    color: $color__fitz;
-    ul {
-        margin: 0;
-        padding: 0;
-        li {
-            display: inline;
-            list-style-type: none;
-            a {
-                height: 30px;
-                text-decoration: none;
-                svg.footer-icon {
-                    height: 30px;
-                    width: 30px;
-                    fill: $color__fitz;
-                }
-                &:hover {
-                    text-decoration: none;
-                    svg {
-                        transform: translateY(-5px);
-                        -webkit-transform: translateY(-5px);
-                    }
-                }
-            }
-        }
-    }
-}
-
-
-// ---------------------------------------
-.hamburger-wrapper {
-    padding: 0;
-    position: fixed;
-    top: 20px;
-    right: 25px;
-    width: 25px;
-    z-index: 999;
-    .hamburger {
-        height: 3px;
-        margin: 4px auto;
-        background: $color__fitz;
-        border-radius: 2px;
-    }
-}
-// ----------------------------------------
-.navigation-wrapper {
-    padding: 40px 0 0 0;
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100%;
-    z-index: 900;
-    display: none;
-    background-color: transparent;
-    -webkit-transition: all 1s linear;
-    -moz-transition: all 1s linear;
-    -ms-transition: all 1s linear;
-    -o-transition: all 1s linear;
-    transition: all 1s linear;
-}
-
-.navigation {
-    padding: 20px 25px 0 0;
-    display: none;
-}
-
-.show-menu {
-    display: block;
-    background-color: rgba(70,80,88,0.25);
-}
-
-.navigation li {
-    list-style: none;
-    margin: 50px 0;
-    transition: all ease .5s;
-    -webkit-transition: all ease .5s;
-}
-
-.navigation li.small-padding {
-    margin: 0;
- }
-
-.navigation li a {
-    display: block;
-    padding: 2px 5px;
-    color: $color__fitz;
-    text-decoration: none;
-    text-align: right;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    border-right: 3px solid $color__gray;
-    transition: all ease .3s;
-    -webkit-transition: all ease .3s;
-}
-
-.navigation li a:hover {
-    padding-right: 15px;
-    border-right: 3px solid $color__fitz;
-}
-
-// Small
-@media only screen and (max-width: 544px) {
-    .sticky-wrap {
-        min-height: 100%;
-        margin-bottom: -80px;
-        &:after {
-            content: "";
-            display: block;
-            height: 80px;
-        }
-    }
-    .navigation-wrapper {
-        width: 60%;
-    }
-    footer.site-footer {
-        height: 80px;
-    }
-}
-
-// Small devices (landscape phones, 544px and up)
-@media (min-width: 544px) {
-    .navigation-wrapper {
-        width: 60%;
-    }
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-    .navigation-wrapper {
-        width: 45%;
-    }
-}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    .navigation-wrapper {
-        width: 45%;
-    }
-}
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-    .navigation-wrapper {
-        width: 30%;
-    }
-}
+@import "nav";
+@import "footer";
+@import "media_queries";
