--- a/site/themes/fitz/css/fitz.css
+++ b/site/themes/fitz/css/fitz.css
@@ -15,10 +15,6 @@ a {
     color: #465058;
     text-decoration: none; }
 
-.hero-text p {
-  margin-top: 1em;
-  font-size: 2em; }
-
 .sticky-page {
   height: 100%; }
 
@@ -33,29 +29,6 @@ a {
 #logo {
   width: 100%;
   padding-top: 15px; }
-
-footer.site-footer {
-  height: 40px;
-  line-height: 40px;
-  color: #465058; }
-  footer.site-footer ul {
-    margin: 0;
-    padding: 0; }
-    footer.site-footer ul li {
-      display: inline;
-      list-style-type: none; }
-      footer.site-footer ul li a {
-        height: 30px;
-        text-decoration: none; }
-        footer.site-footer ul li a svg.footer-icon {
-          height: 30px;
-          width: 30px;
-          fill: #465058; }
-        footer.site-footer ul li a:hover {
-          text-decoration: none; }
-          footer.site-footer ul li a:hover svg {
-            transform: translateY(-5px);
-            -webkit-transform: translateY(-5px); }
 
 .hamburger-wrapper {
   padding: 0;
@@ -114,6 +87,33 @@ footer.site-footer {
 .navigation li a:hover {
   padding-right: 15px;
   border-right: 3px solid #465058; }
+
+footer.site-footer {
+  height: 40px;
+  line-height: 40px;
+  color: #465058; }
+  footer.site-footer ul {
+    height: 40px;
+    margin: 0;
+    padding: 6px 0 0 0; }
+    footer.site-footer ul li {
+      display: inline;
+      list-style-type: none; }
+      footer.site-footer ul li a {
+        height: 30px;
+        text-decoration: none; }
+        footer.site-footer ul li a svg.footer-icon {
+          height: 30px;
+          width: 30px;
+          fill: #465058; }
+        footer.site-footer ul li a:hover {
+          text-decoration: none; }
+          footer.site-footer ul li a:hover svg {
+            transform: translateY(-5px);
+            -webkit-transform: translateY(-5px); }
+  footer.site-footer.top-border {
+    margin-top: 30px;
+    border-top: 2px solid #465058; }
 
 @media only screen and (max-width: 544px) {
   .sticky-wrap {
