--- a/site/themes/fitz/sass/fitz.scss
+++ b/site/themes/fitz/sass/fitz.scss
@@ -63,20 +63,23 @@ h1 {
     margin-top: 1em;
     margin-bottom: 1em;
     @include font-size(1.125);
+
+    p > img {
+        max-width: 100%;
+        height: auto;
+    }
 }
 
-.spam { display: none; }
-
-input,
-textarea {
-    resize: none;
-    outline: none;
-}
-
-.form-control:focus {
-    border-color: $color__fitz;
+.avatar {
+    display: block;
+    width: 35%;
+    margin: 0 auto;
+    border-radius: 50%;
+    border: 4px solid $color__gray;
 }
 
 @import "nav";
+@import "forms";
+@import "resume";
 @import "footer";
 @import "media_queries";
