--- a/site/themes/fitz/templates/contact.html
+++ b/site/themes/fitz/templates/contact.html
@@ -1,45 +1,39 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-md-10 offset-md-1">
+        <div class="col-xs-12 text-xs-center">
+            <h1>{{ title }}</h1>
+        </div>
+    </div>
 
-            <div class="row">
-                <div class="col-xs-12 text-xs-center">
-                    <h1>{{ title }}</h1>
+    <div class="row">
+        <div class="body-copy col-xs-12 col-sm-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            {{ form:create in="contact" to="colin@fitz-maurice.com"}}
+
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" class="form-control" name="name" value="{{ old:name }}" />
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="body-copy col-xs-12 col-sm-12 col-md-8 offset-md-2">
-                    {{ form:create in="contact" to="colin@fitz-maurice.com"}}
-
-                        <div class="form-group">
-                            <label for="name">Name:</label>
-                            <input type="text" class="form-control" name="name" value="{{ old:name }}" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="name">Email:</label>
-                            <input type="email" class="form-control" name="email" value="{{ old:email }}" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="name">Subject:</label>
-                            <input type="text" class="form-control" name="subject" value="{{ old:subject }}" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="name">Message:</label>
-                            <textarea class="form-control" name="message" rows="9">{{ old:message }}</textarea>
-                        </div>
-
-                        <input type="text" name="honeypot" class="spam" />
-
-                        <button type="submit" class="btn btn-primary">Send</button>
-                    {{ /form:create }}
+                <div class="form-group">
+                    <label for="name">Email:</label>
+                    <input type="email" class="form-control" name="email" value="{{ old:email }}" />
                 </div>
-            </div>
 
+                <div class="form-group">
+                    <label for="name">Subject:</label>
+                    <input type="text" class="form-control" name="subject" value="{{ old:subject }}" />
+                </div>
+
+                <div class="form-group">
+                    <label for="name">Message:</label>
+                    <textarea class="form-control" name="message" rows="9">{{ old:message }}</textarea>
+                </div>
+
+                <input type="text" name="honeypot" class="spam" />
+
+                <button type="submit" class="btn btn-primary">Send</button>
+            {{ /form:create }}
         </div>
     </div>
 
