--- a/site/themes/fitz/css/fitz.css
+++ b/site/themes/fitz/css/fitz.css
@@ -1,210 +1,2 @@
-@import 'https://fonts.googleapis.com/css?family=Lato';
-body {
-  font-family: 'Lato', sans-serif;
-  font-size: 16px;
-  border-top: 6px solid #465058;
-  color: #909090; }
-
-body.home {
-  border: 6px solid #465058;
-  height: 100%;
-  width: 100%; }
-
-a {
-  color: #465058;
-  font-weight: bold; }
-  a:hover, a:active, a:focus {
-    color: #465058;
-    text-decoration: underline; }
-
-.sticky-page {
-  height: 100%; }
-
-.sticky-wrap {
-  min-height: 100%;
-  margin-bottom: -40px; }
-  .sticky-wrap:after {
-    content: "";
-    display: block;
-    height: 40px; }
-
-#home-logo {
-  width: 100%;
-  padding-top: 15px; }
-
-#logo {
-  margin-top: 3em; }
-
-h1 {
-  color: #465058;
-  margin-top: 1.25em;
-  margin-bottom: 1.25em;
-  font-size: 40px;
-  font-size: 2.5rem; }
-
-.body-copy > p {
-  margin-top: 1em;
-  margin-bottom: 1em;
-  font-size: 18px;
-  font-size: 1.125rem; }
-  .body-copy > p p > img {
-    max-width: 100%;
-    height: auto; }
-
-.avatar {
-  display: block;
-  width: 35%;
-  margin: 0 auto;
-  border-radius: 50%;
-  border: 4px solid #EEEEEE; }
-
-.hamburger-wrapper {
-  padding: 0;
-  position: fixed;
-  top: 20px;
-  right: 25px;
-  width: 25px;
-  z-index: 999; }
-  .hamburger-wrapper .hamburger {
-    height: 3px;
-    margin: 4px auto;
-    background: #465058;
-    border-radius: 2px; }
-
-.navigation-wrapper {
-  padding: 40px 0 0 0;
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100%;
-  z-index: 900;
-  display: none;
-  background-color: transparent;
-  -webkit-transition: all 1s linear;
-  transition: all 1s linear; }
-
-.navigation {
-  padding: 20px 25px 0 0;
-  display: none; }
-
-.show-menu {
-  display: block;
-  background-color: rgba(70, 80, 88, 0.25); }
-
-.navigation li {
-  list-style: none;
-  margin: 50px 0;
-  transition: all ease .5s;
-  -webkit-transition: all ease .5s; }
-
-.navigation li.small-padding {
-  margin: 0; }
-
-.navigation li a {
-  display: block;
-  padding: 2px 5px;
-  color: #465058;
-  text-decoration: none;
-  text-align: right;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  border-right: 3px solid #EEEEEE;
-  transition: all ease .3s;
-  -webkit-transition: all ease .3s; }
-
-.navigation li a:hover {
-  padding-right: 15px;
-  border-right: 3px solid #465058; }
-
-input,
-textarea {
-  resize: none;
-  outline: none; }
-
-.spam {
-  display: none; }
-
-.form-control:focus {
-  border-color: #465058; }
-
-.btn-primary {
-  background-color: #465058;
-  border-color: #465058; }
-
-.resume section {
-  margin-top: 1em;
-  margin-bottom: 1em; }
-
-.resume h2, .resume .dates {
-  color: #465058;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em; }
-
-.resume h3 {
-  font-size: 18px;
-  font-size: 1.125rem;
-  font-style: italic; }
-
-.resume a {
-  border-top: 1px solid #EEEEEE;
-  padding-top: 0.5em;
-  margin-top: 1em;
-  display: inline-block; }
-
-footer.site-footer {
-  height: 40px;
-  line-height: 40px;
-  color: #465058; }
-  footer.site-footer ul {
-    height: 40px;
-    margin: 0;
-    padding: 6px 0 0 0; }
-    footer.site-footer ul li {
-      display: inline;
-      list-style-type: none; }
-      footer.site-footer ul li a {
-        height: 30px;
-        text-decoration: none; }
-        footer.site-footer ul li a svg.footer-icon {
-          height: 30px;
-          width: 30px;
-          fill: #465058; }
-        footer.site-footer ul li a:hover {
-          text-decoration: none; }
-          footer.site-footer ul li a:hover svg {
-            transform: translateY(-5px);
-            -webkit-transform: translateY(-5px); }
-  footer.site-footer.top-border {
-    margin-top: 30px;
-    border-top: 2px solid #465058; }
-
-@media only screen and (max-width: 544px) {
-  .sticky-wrap {
-    min-height: 100%;
-    margin-bottom: -80px; }
-    .sticky-wrap:after {
-      content: "";
-      display: block;
-      height: 80px; }
-  .navigation-wrapper {
-    width: 60%; }
-  footer.site-footer {
-    height: 80px; } }
-
-@media (min-width: 544px) {
-  .navigation-wrapper {
-    width: 60%; } }
-
-@media (min-width: 768px) {
-  .navigation-wrapper {
-    width: 45%; } }
-
-@media (min-width: 992px) {
-  .navigation-wrapper {
-    width: 45%; } }
-
-@media (min-width: 1200px) {
-  .navigation-wrapper {
-    width: 30%; } }
-
+@import url(https://fonts.googleapis.com/css?family=Lato);.sticky-page,body.home{height:100%}body{font-family:Lato,sans-serif;font-size:16px;border-top:6px solid #465058;color:#909090}body.home{border:6px solid #465058;width:100%}a{color:#465058;font-weight:700}a:active,a:focus,a:hover{color:#465058;text-decoration:underline}.sticky-wrap{min-height:100%;margin-bottom:-40px}.sticky-wrap:after{content:"";display:block;height:40px}#home-logo{width:100%;padding-top:15px}#logo{margin-top:3em}h1{color:#465058;margin-top:1.25em;margin-bottom:1.25em;font-size:40px;font-size:2.5rem}.body-copy,.body-copy>p{margin-bottom:1em}.body-copy>p{margin-top:1em;font-size:18px;font-size:1.125rem}.body-copy>p p>img,img{max-width:100%;height:auto}.avatar{display:block;width:35%;margin:0 auto;border-radius:50%;border:4px solid #eee}.hamburger-wrapper{padding:0;position:fixed;top:20px;right:25px;width:25px;z-index:999}.hamburger-wrapper .hamburger{height:3px;margin:4px auto;background:#465058;border-radius:2px}.navigation-wrapper{padding:40px 0 0;position:fixed;top:0;right:0;height:100%;z-index:900;display:none;background-color:transparent;-webkit-transition:all 1s linear;transition:all 1s linear}.navigation{padding:20px 25px 0 0;display:none}.show-menu{display:block;background-color:rgba(70,80,88,.25)}.navigation li{list-style:none;margin:50px 0;transition:all ease .5s;-webkit-transition:all ease .5s}.navigation li.small-padding{margin:0}.navigation li a{display:block;padding:2px 5px;color:#465058;text-decoration:none;text-align:right;text-transform:uppercase;letter-spacing:1px;border-right:3px solid #eee;transition:all ease .3s;-webkit-transition:all ease .3s}.navigation li a:hover{padding-right:15px;border-right:3px solid #465058}.btn-primary,.form-control:focus{border-color:#465058}input,textarea{resize:none;outline:0}.spam{display:none}.btn-primary{background-color:#465058}.resume section{margin-top:1em;margin-bottom:1em}.resume .dates,.resume h2{color:#465058;margin-top:.5em;margin-bottom:.5em}.resume h3{font-size:18px;font-size:1.125rem;font-style:italic}.resume a{border-top:1px solid #eee;padding-top:.5em;margin-top:1em;display:inline-block}.projects .project__wrapper{width:100%;height:100%;float:left;overflow:hidden;position:relative;text-align:center;cursor:default;border:4px solid #eee;margin-bottom:2em}.projects .project__wrapper .project__overlay{width:100%;height:100%;position:absolute;overflow:hidden;top:0;left:0}.projects .project__wrapper img{display:block;position:relative;-webkit-transition:all .4s ease-in;transition:all .4s ease-in}.projects .project__wrapper:hover img{filter:url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');filter:grayscale(1) blur(3px);-webkit-filter:grayscale(1) blur(3px);-webkit-transform:scale(1.1);transform:scale(1.1)}.projects .project__wrapper:hover .project__info,.projects .project__wrapper:hover h2{opacity:1;filter:alpha(opacity=100);-webkit-transform:scale(1);transform:scale(1)}.projects .project__wrapper h2{text-align:center;position:relative;font-size:17px;padding:10px;background:rgba(0,0,0,.6);-webkit-transform:scale(.7);transform:scale(.7);-webkit-transition:all .4s ease-in;transition:all .4s ease-in;opacity:0;filter:alpha(opacity=0);color:#fff;text-transform:uppercase}.projects .project__wrapper .project__info{display:inline-block;text-decoration:none;padding:7px 14px;border:1px solid #fff;margin:50px 0 0;background-color:transparent;-webkit-transform:scale(.7);transform:scale(.7);-webkit-transition:all .4s ease-in;transition:all .4s ease-in;opacity:0;filter:alpha(opacity=0);color:#fff;text-transform:uppercase}.projects .project__wrapper .project__info:hover{box-shadow:0 0 5px #fff}.a_project .hero_img{display:block;border:4px solid #eee;margin-bottom:2em}.a_project .project__thumbs{display:block;border:4px solid #eee;margin:0 auto 2em}footer.site-footer{height:40px;line-height:40px;color:#465058}.lb-loader,.lightbox{text-align:center;line-height:0}footer.site-footer ul{height:40px;margin:0;padding:6px 0 0}footer.site-footer ul li{display:inline;list-style-type:none}footer.site-footer ul li a{height:30px;text-decoration:none}footer.site-footer ul li a svg.footer-icon{height:30px;width:30px;fill:#465058}footer.site-footer ul li a:hover{text-decoration:none}footer.site-footer ul li a:hover svg{transform:translateY(-5px);-webkit-transform:translateY(-5px)}footer.site-footer.top-border{margin-top:30px;border-top:2px solid #465058}@media only screen and (max-width:544px){.sticky-wrap{min-height:100%;margin-bottom:-80px}.sticky-wrap:after{content:"";display:block;height:80px}.navigation-wrapper{width:60%}footer.site-footer{height:80px}}@media (min-width:544px){.navigation-wrapper{width:60%}}@media (min-width:768px){.navigation-wrapper{width:45%}}@media (min-width:992px){.navigation-wrapper{width:45%}}@media (min-width:1200px){.navigation-wrapper{width:30%}}body:after{content:url(../../../../assets/images/close.png) url(../../../../assets/images/loading.gif) url(../../../../assets/images/prev.png) url(../../../../assets/images/next.png);display:none}.lb-dataContainer:after,.lb-outerContainer:after{content:"";clear:both}body.lb-disable-scrolling{overflow:hidden}.lightboxOverlay{position:absolute;top:0;left:0;z-index:9999;background-color:#000;filter:alpha(Opacity=80);opacity:.8;display:none}.lightbox{position:absolute;left:0;width:100%;z-index:10000;font-weight:400}.lightbox .lb-image{display:block;height:auto;max-width:inherit;border-radius:3px}.lightbox a img{border:none}.lb-outerContainer{position:relative;background-color:#fff;width:250px;height:250px;margin:0 auto;border-radius:4px}.lb-loader,.lb-nav{position:absolute;left:0}.lb-outerContainer:after{display:table}.lb-container{padding:4px}.lb-loader{top:43%;height:25%;width:100%}.lb-cancel{display:block;width:32px;height:32px;margin:0 auto;background:url(../../../../assets/images/loading.gif) no-repeat}.lb-nav{top:0;height:100%;width:100%;z-index:10}.lb-container>.nav{left:0}.lb-nav a{outline:0;background-image:url(data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==)}.lb-next,.lb-prev{height:100%;cursor:pointer;display:block}.lb-nav a.lb-prev{width:34%;left:0;float:left;background:url(../../../../assets/images/prev.png) left 48% no-repeat;filter:alpha(Opacity=0);opacity:0;-webkit-transition:opacity .6s;transition:opacity .6s}.lb-nav a.lb-prev:hover{filter:alpha(Opacity=100);opacity:1}.lb-nav a.lb-next{width:64%;right:0;float:right;background:url(../../../../assets/images/next.png) right 48% no-repeat;filter:alpha(Opacity=0);opacity:0;-webkit-transition:opacity .6s;transition:opacity .6s}.lb-nav a.lb-next:hover{filter:alpha(Opacity=100);opacity:1}.lb-dataContainer{margin:0 auto;padding-top:5px;width:100%;border-bottom-left-radius:4px;border-bottom-right-radius:4px}.lb-dataContainer:after{display:table}.lb-data{padding:0 4px;color:#ccc}.lb-data .lb-details{width:85%;float:left;text-align:left;line-height:1.1em}.lb-data .lb-caption{font-size:13px;font-weight:700;line-height:1em}.lb-data .lb-number{display:block;clear:left;padding-bottom:1em;font-size:12px;color:#999}.lb-data .lb-close{display:block;float:right;width:30px;height:30px;background:url(../../../../assets/images/close.png) top right no-repeat;text-align:right;outline:0;filter:alpha(Opacity=70);opacity:.7;-webkit-transition:opacity .2s;transition:opacity .2s}.lb-data .lb-close:hover{cursor:pointer;filter:alpha(Opacity=100);opacity:1}
 /*# sourceMappingURL=fitz.css.map */
