--- a/site/themes/fitz/partials/nav.html
+++ b/site/themes/fitz/partials/nav.html
@@ -1,7 +1,7 @@
 <header>
     <div class="row text-center">
         <div class="col-xs-12 text-xs-center">
-            <a href="/">
+            <a class="logo-link" href="/">
                 <svg id="logo">
                     <use xlink:href="/site/themes/fitz/svg/sprite.svg#fitz"></use>
                 </svg>
