--- a/site/themes/fitz/partials/nav.html
+++ b/site/themes/fitz/partials/nav.html
@@ -9,13 +9,13 @@
         </div>
     </div>
 
-    <a id="menulink" href="#">
-        <div class="hamburger-wrapper">
-            <div class="hamburger"></div>
-            <div class="hamburger"></div>
-            <div class="hamburger"></div>
+    <div class="menu-icon-wrapper">
+        <div class="x">
+            <input type="checkbox" id="menu-x" />
+            <label for="menu-x"><span></span></label>
         </div>
-    </a>
+    </div>
+
     <div class="navigation-wrapper">
         <ul class="navigation">
             {{ nav from="/" include_home="true" scope="tag" }}
