--- a/site/themes/FITZ/templates/home.html
+++ b/site/themes/FITZ/templates/home.html
@@ -10,13 +10,14 @@
                 </svg>
             </div>
             <div class="col-md-6 col-md-offset-2 col-sm-6 col-xs-6">
-                <a id="menulink" href="#">
-                    <div class="hamburger-wrapper">
-                        <div class="hamburger"></div>
-                        <div class="hamburger"></div>
-                        <div class="hamburger"></div>
+
+                <div class="menu-icon-wrapper">
+                    <div class="x">
+                        <input type="checkbox" id="menu-x" />
+                        <label for="menu-x"><span></span></label>
                     </div>
-                </a>
+                </div>
+
                 <div class="navigation-wrapper">
                     <ul class="navigation">
                         {{ nav from="/" include_home="true" scope="tag" }}
