--- a/site/themes/fitz/css/fitz.css
+++ b/site/themes/fitz/css/fitz.css
@@ -77,18 +77,49 @@ img {
   border-radius: 50%;
   border: 4px solid #EEEEEE; }
 
-.hamburger-wrapper {
+.menu-icon-wrapper {
   padding: 0;
   position: fixed;
   top: 20px;
-  right: 25px;
+  right: 30px;
   width: 25px;
   z-index: 999; }
-  .hamburger-wrapper .hamburger {
-    height: 3px;
-    margin: 4px auto;
-    background: #465058;
-    border-radius: 2px; }
+  .menu-icon-wrapper .x input#menu-x {
+    display: none; }
+  .menu-icon-wrapper .x label {
+    display: block;
+    width: 35px;
+    height: 25px;
+    position: relative; }
+    .menu-icon-wrapper .x label span {
+      position: relative;
+      top: 10px; }
+      .menu-icon-wrapper .x label span, .menu-icon-wrapper .x label span:before, .menu-icon-wrapper .x label span:after {
+        -webkit-transition: all 300ms ease;
+        transition: all 300ms ease;
+        display: block;
+        background: #465058;
+        width: 35px;
+        height: 5px;
+        border-radius: 2.5px; }
+      .menu-icon-wrapper .x label span:before, .menu-icon-wrapper .x label span:after {
+        content: '';
+        position: absolute; }
+      .menu-icon-wrapper .x label span:before {
+        bottom: 10px; }
+      .menu-icon-wrapper .x label span:after {
+        top: 10px; }
+
+.x :checked ~ label span {
+  width: 0; }
+  .x :checked ~ label span:before {
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(45deg);
+    bottom: 0; }
+  .x :checked ~ label span:after {
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 0; }
 
 .navigation-wrapper {
   padding: 40px 0 0 0;
@@ -101,39 +132,34 @@ img {
   background-color: transparent;
   -webkit-transition: all 1s linear;
   transition: all 1s linear; }
-
-.navigation {
-  padding: 20px 25px 0 0;
-  display: none; }
+  .navigation-wrapper ul.navigation {
+    padding: 20px 25px 0 0;
+    display: none; }
+    .navigation-wrapper ul.navigation li {
+      list-style: none;
+      margin: 50px 0;
+      transition: all ease .5s;
+      -webkit-transition: all ease .5s; }
+      .navigation-wrapper ul.navigation li.small-padding {
+        margin: 0; }
+      .navigation-wrapper ul.navigation li a {
+        display: block;
+        padding: 2px 5px;
+        color: #465058;
+        text-decoration: none;
+        text-align: right;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        border-right: 3px solid #EEEEEE;
+        transition: all ease .3s;
+        -webkit-transition: all ease .3s; }
+        .navigation-wrapper ul.navigation li a:hover {
+          padding-right: 15px;
+          border-right: 3px solid #465058; }
 
 .show-menu {
   display: block;
   background-color: rgba(70, 80, 88, 0.25); }
-
-.navigation li {
-  list-style: none;
-  margin: 50px 0;
-  transition: all ease .5s;
-  -webkit-transition: all ease .5s; }
-
-.navigation li.small-padding {
-  margin: 0; }
-
-.navigation li a {
-  display: block;
-  padding: 2px 5px;
-  color: #465058;
-  text-decoration: none;
-  text-align: right;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  border-right: 3px solid #EEEEEE;
-  transition: all ease .3s;
-  -webkit-transition: all ease .3s; }
-
-.navigation li a:hover {
-  padding-right: 15px;
-  border-right: 3px solid #465058; }
 
 input,
 textarea {
