--- a/site/themes/fitz/templates/contact.html
+++ b/site/themes/fitz/templates/contact.html
@@ -7,6 +7,12 @@
     </div>
 
     <div class="row">
+        <div class="col-xs-12 text-xs-center">
+            <p>Get in touch</p>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="body-copy col-xs-12 col-sm-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             {{ form:create in="contact" to="colin@fitz-maurice.com"}}
 
