--- a/site/themes/fitz/templates/projects.html
+++ b/site/themes/fitz/templates/projects.html
@@ -19,8 +19,8 @@
                 <div class="project__wrapper">
                     {{ assets:hero_image }}<img src="{{ url }}" alt="{{ alt }}"/>{{ /assets:hero_image }}
                     <div class="project__overlay">
-                       <h2>Hover effect 3</h2>
-                       <a class="project__info" href="{{ url }}">link here</a>
+                       <h2>{{ title }}</h2>
+                       <a class="project__info" href="{{ url }}">View project</a>
                     </div>
                 </div>
 
