--- a/site/themes/fitz/css/fitz.css
+++ b/site/themes/fitz/css/fitz.css
@@ -81,34 +81,43 @@ img {
   padding: 0;
   position: fixed;
   top: 20px;
-  right: 30px;
-  width: 25px;
-  z-index: 999; }
-  .menu-icon-wrapper .x input#menu-x {
-    display: none; }
-  .menu-icon-wrapper .x label {
-    display: block;
-    width: 35px;
-    height: 25px;
-    position: relative; }
-    .menu-icon-wrapper .x label span {
+  right: 20px;
+  width: 35px;
+  z-index: 999;
+  cursor: pointer; }
+  .menu-icon-wrapper:hover {
+    cursor: pointer; }
+  .menu-icon-wrapper .x {
+    cursor: pointer; }
+    .menu-icon-wrapper .x input#menu-x {
+      display: none;
+      cursor: pointer; }
+    .menu-icon-wrapper .x label {
+      display: block;
+      width: 35px;
+      height: 25px;
       position: relative;
-      top: 10px; }
-      .menu-icon-wrapper .x label span, .menu-icon-wrapper .x label span:before, .menu-icon-wrapper .x label span:after {
-        -webkit-transition: all 300ms ease;
-        transition: all 300ms ease;
-        display: block;
-        background: #465058;
-        width: 35px;
-        height: 5px;
-        border-radius: 2.5px; }
-      .menu-icon-wrapper .x label span:before, .menu-icon-wrapper .x label span:after {
-        content: '';
-        position: absolute; }
-      .menu-icon-wrapper .x label span:before {
-        bottom: 10px; }
-      .menu-icon-wrapper .x label span:after {
-        top: 10px; }
+      cursor: pointer; }
+      .menu-icon-wrapper .x label span {
+        position: relative;
+        top: 10px;
+        cursor: pointer; }
+        .menu-icon-wrapper .x label span, .menu-icon-wrapper .x label span:before, .menu-icon-wrapper .x label span:after {
+          -webkit-transition: all 300ms ease;
+          transition: all 300ms ease;
+          display: block;
+          background: #465058;
+          width: 35px;
+          height: 5px;
+          cursor: pointer;
+          border-radius: 2.5px; }
+        .menu-icon-wrapper .x label span:before, .menu-icon-wrapper .x label span:after {
+          content: '';
+          position: absolute; }
+        .menu-icon-wrapper .x label span:before {
+          bottom: 10px; }
+        .menu-icon-wrapper .x label span:after {
+          top: 10px; }
 
 .x :checked ~ label span {
   width: 0; }
@@ -219,9 +228,6 @@ textarea {
     -webkit-transition: all 0.4s ease-in;
     transition: all 0.4s ease-in; }
   .projects .project__wrapper:hover img {
-    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
-    filter: grayscale(1) blur(3px);
-    -webkit-filter: grayscale(1) blur(3px);
     -webkit-transform: scale(1.1);
     transform: scale(1.1); }
   .projects .project__wrapper:hover .project__info, .projects .project__wrapper:hover h2 {
@@ -235,22 +241,23 @@ textarea {
     position: relative;
     font-size: 17px;
     padding: 10px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(255, 255, 255, 0.9);
     -webkit-transform: scale(0.7);
     transform: scale(0.7);
     -webkit-transition: all 0.4s ease-in;
     transition: all 0.4s ease-in;
     opacity: 0;
     filter: alpha(opacity=0);
-    color: #fff;
-    text-transform: uppercase; }
+    color: #465058;
+    text-transform: uppercase;
+    box-shadow: 0px 7px 26px 0px rgba(0, 0, 0, 0.75); }
   .projects .project__wrapper .project__info {
     display: inline-block;
     text-decoration: none;
     padding: 7px 14px;
     border: 1px solid #fff;
     margin: 50px 0 0 0;
-    background-color: transparent;
+    background-color: #fff;
     -webkit-transform: scale(0.7);
     transform: scale(0.7);
     -webkit-transition: all 0.4s ease-in;
@@ -258,9 +265,8 @@ textarea {
     opacity: 0;
     filter: alpha(opacity=0);
     color: #fff;
-    text-transform: uppercase; }
-    .projects .project__wrapper .project__info:hover {
-      box-shadow: 0 0 5px #fff; }
+    text-transform: uppercase;
+    box-shadow: 0px 7px 26px 0px rgba(0, 0, 0, 0.75); }
 
 .a_project .hero_img {
   display: block;
