--- a/site/themes/fitz/sass/_projects.scss
+++ b/site/themes/fitz/sass/_projects.scss
@@ -27,9 +27,9 @@
         }
         &:hover {
             img {
-                filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
-                filter: grayscale(1) blur(3px);
-                -webkit-filter: grayscale(1) blur(3px);
+                // filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
+                // filter: grayscale(1) blur(3px);
+                // -webkit-filter: grayscale(1) blur(3px);
                 -webkit-transform: scale(1.1);
                 -ms-transform: scale(1.1);
                 transform: scale(1.1);
@@ -49,7 +49,7 @@
             position: relative;
             font-size: 17px;
             padding: 10px;
-            background: rgba(0, 0, 0, 0.6);
+            background: rgba(255, 255, 255, 0.9);
             -webkit-transform: scale(0.7);
             -ms-transform: scale(0.7);
             transform: scale(0.7);
@@ -57,8 +57,11 @@
             transition: all 0.4s ease-in;
             opacity: 0;
             filter: alpha(opacity=0);
-            color: #fff;
+            color: $color__fitz;
             text-transform: uppercase;
+            -webkit-box-shadow: 0px 7px 26px 0px rgba(0,0,0,0.75);
+            -moz-box-shadow: 0px 7px 26px 0px rgba(0,0,0,0.75);
+            box-shadow: 0px 7px 26px 0px rgba(0,0,0,0.75);
         }
         .project__info {
             display: inline-block;
@@ -66,7 +69,7 @@
             padding: 7px 14px;
             border: 1px solid #fff;
             margin: 50px 0 0 0;
-            background-color: transparent;
+            background-color: #fff;
             -webkit-transform: scale(0.7);
             -ms-transform: scale(0.7);
             transform: scale(0.7);
@@ -76,8 +79,11 @@
             filter: alpha(opacity=0);
             color: #fff;
             text-transform: uppercase;
+            -webkit-box-shadow: 0px 7px 26px 0px rgba(0,0,0,0.75);
+            -moz-box-shadow: 0px 7px 26px 0px rgba(0,0,0,0.75);
+            box-shadow: 0px 7px 26px 0px rgba(0,0,0,0.75);
             &:hover {
-                box-shadow: 0 0 5px #fff;
+                // box-shadow: 0 0 5px #fff;
             }
         }
     }
