--- a/site/themes/fitz/templates/contact.html
+++ b/site/themes/fitz/templates/contact.html
@@ -16,6 +16,20 @@
         <div class="body-copy col-xs-12 col-sm-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             {{ form:create in="contact" to="colin@fitz-maurice.com"}}
 
+                {{ if errors }}
+                    <div class="alert alert-danger">
+                        {{ errors }}
+                            {{ value }}<br>
+                        {{ /errors }}
+                    </div>
+                {{ /if }}
+
+                {{ if success }}
+                    <div class="alert alert-success">
+                        Email successfully sent. Thank you!
+                    </div>
+                {{ /if }}
+
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" class="form-control" name="name" value="{{ old:name }}" />
